fix hydration warnings on mobile

--- a/src/styles/base/buttons.css
+++ b/src/styles/base/buttons.css
@@ -30,6 +30,7 @@
     outline: 1.5px solid var(--black);
     margin: 0;
     position: relative;
+    margin-right: 0.8rem;
 
     &::before {
       content: "";
