--- a/src/styles/pages/list-page.css
+++ b/src/styles/pages/list-page.css
@@ -77,6 +77,7 @@
     .sidebar {
       grid-column: 1 / span 2;
       position: static;
+      height: auto;
     }
 
     .main-content {
